[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["concurrency", "embedded", "no-std"]
description = "Asymmetric Multi-Processing on microcontrollers"
documentation = "https://docs.rs/microamp"
edition = "2018"
keywords = ["AMP", "asymmetric"]
license = "MIT OR Apache-2.0"
name = "microamp"
readme = "README.md"
repository = "https://github.com/japaric/microamp"
version = "0.1.0-alpha.2"

[dependencies]
microamp-macros = { version = "0.1.0-alpha.1", path = "macros" }